--- a/ip-view/src/main/java/com/gebond/ip/view/MainForm.form
+++ b/ip-view/src/main/java/com/gebond/ip/view/MainForm.form
@@ -125,7 +125,7 @@
                   <enabled value="true"/>
                   <foreground color="-12991160"/>
                   <hideActionText value="false"/>
-                  <text value="Run"/>
+                  <text value="RUN"/>
                 </properties>
               </component>
               <component id="a0ddd" class="javax.swing.JButton" binding="cancelButton" default-binding="true">
@@ -137,7 +137,7 @@
                   <enabled value="true"/>
                   <foreground color="-1881563"/>
                   <hideActionText value="false"/>
-                  <text value="Cancel"/>
+                  <text value="CANCEL"/>
                 </properties>
               </component>
             </children>
@@ -261,7 +261,14 @@
                   <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="1" hsize-policy="0" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
                 </constraints>
                 <properties>
-                  <stringPainted value="true"/>
+                  <background color="-12991160"/>
+                  <borderPainted value="false"/>
+                  <enabled value="false"/>
+                  <foreground color="-12991160"/>
+                  <indeterminate value="true"/>
+                  <orientation value="0"/>
+                  <string value=""/>
+                  <stringPainted value="false"/>
                 </properties>
               </component>
             </children>
@@ -344,7 +351,7 @@
                   <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
                 </constraints>
                 <properties>
-                  <text value="Select image"/>
+                  <text value="SELECT"/>
                 </properties>
               </component>
               <vspacer id="5dbb4">
