--- a/ip-view/src/main/java/com/gebond/ip/view/ResultsForm.form
+++ b/ip-view/src/main/java/com/gebond/ip/view/ResultsForm.form
@@ -6,7 +6,7 @@
       <xy x="20" y="20" width="500" height="751"/>
     </constraints>
     <properties>
-      <enabled value="false"/>
+      <enabled value="true"/>
     </properties>
     <border type="none"/>
     <children>
@@ -15,7 +15,9 @@
         <constraints>
           <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
         </constraints>
-        <properties/>
+        <properties>
+          <enabled value="true"/>
+        </properties>
         <border type="bevel-raised"/>
         <children>
           <component id="dfd9" class="javax.swing.JLabel" binding="lastProcessedImage">
