--- a/ip-view/src/main/java/com/gebond/ip/view/MainForm.form
+++ b/ip-view/src/main/java/com/gebond/ip/view/MainForm.form
@@ -3,7 +3,7 @@
   <grid id="27dc6" binding="mainPanel" layout-manager="GridLayoutManager" row-count="1" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="0" left="0" bottom="0" right="0"/>
     <constraints>
-      <xy x="20" y="20" width="607" height="437"/>
+      <xy x="20" y="20" width="854" height="460"/>
     </constraints>
     <properties/>
     <border type="none"/>
@@ -77,34 +77,101 @@
                   </component>
                 </children>
               </grid>
-              <grid id="29a53" binding="discreteSettingPanel" layout-manager="GridLayoutManager" row-count="1" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+              <grid id="29a53" binding="discreteSettingPanel" layout-manager="GridLayoutManager" row-count="1" column-count="8" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
                 <margin top="0" left="0" bottom="0" right="0"/>
                 <constraints>
                   <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="0" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
                 </constraints>
                 <properties>
-                  <enabled value="false"/>
+                  <enabled value="true"/>
                   <visible value="false"/>
                 </properties>
                 <border type="none"/>
                 <children>
-                  <component id="723e4" class="javax.swing.JTextField" binding="a3TextField" default-binding="true">
+                  <component id="723e4" class="javax.swing.JTextField" binding="inputParamP">
                     <constraints>
-                      <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="1" hsize-policy="0" anchor="8" fill="1" indent="0" use-parent-layout="false">
-                        <preferred-size width="112" height="24"/>
+                      <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="1" anchor="4" fill="0" indent="0" use-parent-layout="false">
+                        <preferred-size width="45" height="24"/>
                       </grid>
                     </constraints>
                     <properties>
-                      <enabled value="false"/>
-                      <text value="3"/>
-                      <toolTipText value="p="/>
+                      <enabled value="true"/>
+                      <horizontalAlignment value="0"/>
+                      <text value="2"/>
+                      <toolTipText value=""/>
                     </properties>
                   </component>
-                  <hspacer id="dce07">
+                  <component id="9e09f" class="javax.swing.JTextField" binding="inputParamS">
                     <constraints>
-                      <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="1" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+                      <grid row="0" column="3" row-span="1" col-span="1" vsize-policy="0" hsize-policy="1" anchor="4" fill="0" indent="0" use-parent-layout="false">
+                        <preferred-size width="45" height="-1"/>
+                      </grid>
                     </constraints>
-                  </hspacer>
+                    <properties>
+                      <horizontalAlignment value="0"/>
+                      <text value="2"/>
+                    </properties>
+                  </component>
+                  <component id="4f513" class="javax.swing.JLabel" binding="labelParamS">
+                    <constraints>
+                      <grid row="0" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="4" fill="0" indent="0" use-parent-layout="false"/>
+                    </constraints>
+                    <properties>
+                      <horizontalAlignment value="4"/>
+                      <horizontalTextPosition value="4"/>
+                      <text value="s="/>
+                    </properties>
+                  </component>
+                  <component id="f36ad" class="javax.swing.JLabel" binding="labelParamP">
+                    <constraints>
+                      <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="4" fill="0" indent="0" use-parent-layout="false"/>
+                    </constraints>
+                    <properties>
+                      <horizontalAlignment value="4"/>
+                      <horizontalTextPosition value="4"/>
+                      <text value="p="/>
+                    </properties>
+                  </component>
+                  <component id="c270a" class="javax.swing.JTextField" binding="inputParamN">
+                    <constraints>
+                      <grid row="0" column="5" row-span="1" col-span="1" vsize-policy="0" hsize-policy="1" anchor="4" fill="0" indent="0" use-parent-layout="false">
+                        <preferred-size width="45" height="-1"/>
+                      </grid>
+                    </constraints>
+                    <properties>
+                      <horizontalAlignment value="0"/>
+                      <text value="2"/>
+                    </properties>
+                  </component>
+                  <component id="d060e" class="javax.swing.JLabel" binding="labelParamN">
+                    <constraints>
+                      <grid row="0" column="4" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="4" fill="0" indent="0" use-parent-layout="false"/>
+                    </constraints>
+                    <properties>
+                      <text value="n="/>
+                    </properties>
+                  </component>
+                  <component id="4cfc3" class="javax.swing.JLabel" binding="labelParamSize">
+                    <constraints>
+                      <grid row="0" column="6" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="4" fill="0" indent="0" use-parent-layout="false"/>
+                    </constraints>
+                    <properties>
+                      <text value="size="/>
+                    </properties>
+                  </component>
+                  <component id="2eefa" class="javax.swing.JTextField" binding="inputParamSize">
+                    <constraints>
+                      <grid row="0" column="7" row-span="1" col-span="1" vsize-policy="0" hsize-policy="1" anchor="8" fill="0" indent="0" use-parent-layout="false">
+                        <preferred-size width="45" height="-1"/>
+                      </grid>
+                    </constraints>
+                    <properties>
+                      <editable value="true"/>
+                      <enabled value="false"/>
+                      <horizontalAlignment value="0"/>
+                      <text value="16"/>
+                    </properties>
+                  </component>
                 </children>
               </grid>
             </children>
@@ -165,17 +232,6 @@
                 </constraints>
                 <properties/>
               </component>
-              <component id="e965" class="javax.swing.JSlider" binding="slider1" default-binding="true">
-                <constraints>
-                  <grid row="0" column="1" row-span="1" col-span="2" vsize-policy="0" hsize-policy="2" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
-                </constraints>
-                <properties>
-                  <paintLabels value="false"/>
-                  <snapToTicks value="false"/>
-                  <toolTipText value=""/>
-                  <value value="25"/>
-                </properties>
-              </component>
               <component id="23c5f" class="javax.swing.JLabel" binding="sliderLabel1">
                 <constraints>
                   <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
@@ -230,6 +286,17 @@
                 </constraints>
                 <properties>
                   <text value="Total compression 3%"/>
+                </properties>
+              </component>
+              <component id="e965" class="javax.swing.JSlider" binding="slider1" default-binding="true">
+                <constraints>
+                  <grid row="0" column="1" row-span="1" col-span="2" vsize-policy="0" hsize-policy="2" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+                </constraints>
+                <properties>
+                  <paintLabels value="false"/>
+                  <snapToTicks value="false"/>
+                  <toolTipText value=""/>
+                  <value value="25"/>
                 </properties>
               </component>
             </children>
