--- a/ip-view/src/main/java/com/gebond/ip/view/ResultsForm.form
+++ b/ip-view/src/main/java/com/gebond/ip/view/ResultsForm.form
@@ -6,16 +6,18 @@
       <xy x="20" y="20" width="500" height="751"/>
     </constraints>
     <properties>
-      <enabled value="false"/>
+      <enabled value="true"/>
     </properties>
     <border type="none"/>
     <children>
-      <grid id="80cc5" binding="previewPanel" layout-manager="GridLayoutManager" row-count="2" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+      <grid id="80cc5" binding="previewPanel" layout-manager="GridLayoutManager" row-count="3" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
         <margin top="0" left="0" bottom="0" right="0"/>
         <constraints>
           <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
         </constraints>
-        <properties/>
+        <properties>
+          <enabled value="true"/>
+        </properties>
         <border type="bevel-raised"/>
         <children>
           <component id="dfd9" class="javax.swing.JLabel" binding="lastProcessedImage">
@@ -37,6 +39,14 @@
             </constraints>
             <properties>
               <text value="Last processed image:"/>
+            </properties>
+          </component>
+          <component id="2369c" class="javax.swing.JButton" binding="clearResultsButton">
+            <constraints>
+              <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+            </constraints>
+            <properties>
+              <text value="CLEAR"/>
             </properties>
           </component>
         </children>
